--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
-TWITTER_USERNAME=    # Account username
-TWITTER_PASSWORD=    # Account password
-TWITTER_EMAIL=       # Account email
+TWITTER_USERNAME=
+TWITTER_PASSWORD=   
+TWITTER_EMAIL=    
+HELIUS_API_KEY=
+MONGODB_URL=
+API_KEY=
+PORT=3000
